# CosmOrford

./: .gitignore  LICENSE  README.md  ablation_study.md  pyproject.toml  train.py  train_modal.py  train_modal_ps.py
configs/: finetune_from_pretrain_nopatch.yaml  pretrain_otemulated_nopatch.yaml  unet_condition.yaml  unet_condition_large.yaml  unet_condition_small.yaml
configs/experiments/: ablation_hos_scat_J4_L12.yaml  ablation_hos_scat_J4_L16.yaml  ablation_hos_scat_J4_L4.yaml  ablation_hos_scat_J4_L6.yaml  ablation_hos_scat_J4_hardpool.yaml  ablation_hos_scat_J4_meanstd.yaml  ablation_hos_scat_J4_meanstd_fullgeom.yaml  ablation_hos_scat_J4_meanstd_fullgeom_noshift.yaml  ablation_hos_scat_J4_meanstd_noflip_noshift.yaml  ablation_hos_scat_J4_meanstd_noshift.yaml  ablation_hos_scat_J4_nonorm.yaml  ablation_hos_scat_J4_zscore.yaml  ablation_ps_hos_scat_full_wide.yaml  ablation_ps_scat_J4.yaml  ablation_regime_matrix.yaml  ablation_repeats.yaml  ablation_snr_full_wide_hardpool.yaml  ablation_snr_full_wide_meanstd.yaml  ablation_snr_full_wide_meanstd_fullgeom.yaml  ablation_snr_full_wide_meanstd_fullgeom_noflip_noshift.yaml  ablation_snr_full_wide_meanstd_fullgeom_noshift.yaml  ablation_snr_full_wide_meanstd_noflip_noshift.yaml  ablation_snr_full_wide_meanstd_noshift.yaml  compare_effnetv2s_patched.yaml  compare_effnetv2s_patched_pretrained.yaml  compare_ps_only.yaml  compare_resnet18_best.yaml  efficientnet_b0.yaml  efficientnet_b2.yaml  efficientnet_v2_m.yaml  efficientnet_v2_s.yaml  efficientnet_v2_s_pretrain_gowerstreet.yaml  efficientnet_v2_s_pretrain_lognormal.yaml  finetune_from_pretrain.yaml  finetune_from_pretrain_nopatch_m.yaml  finetune_from_pretrain_ot_nopatch.yaml  phase2_convnext_t.yaml  phase2_swin_v2_t.yaml  (+21 more)
cosmoford/: __init__.py  dataset.py  hos_compressor.py  models.py  models_nopatch.py  prepare_for_submission.py  summaries.py  trainer.py  utils.py
cosmorford/: __init__.py  compressor.py  dataset.py  ema.py  patched_compressor.py  ps_compressor.py  summaries.py  trainer.py
scripts/: analyze_ablation_results.py  auto_watch_batches.py  build_hf_dataset.py  get_kappa_cosmo.py  hf_emulated_dataset.py  monitor_ablation_jobs.py  patchify_gowerstreet.py  plot_budget_scan.py  plot_fom_budget.py  run_budget_scan.py  run_npe_budget_scan.py  submit_ablation_batch.py  submit_job.sh  test_dataloader.py  utils.py  wst_diagnostics.py
shell/: npe_vmim.sh  pretrain_gowerstreet.sh  pretrain_lognormal.sh
tests/: test_compressor.py  test_dataset.py  test_power_spectrum.py
(+14 files in other folders)
