[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmoford"
dynamic = ["version"]
description = "Repository for the NeurIPS Weak Lensing Challenge"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Francois Lanusse", email = "francois.lanusse@cnrs.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "jax[cuda]",
    "flax",
    "matplotlib",
    "optax",
    "scikit-learn",
    "tqdm",
    "numpy",
    "datasets",
    "lightning[pytorch-extra]==2.6.0.dev20251019",
    "torchvision",
    "diffusers>=0.33.1",
    "torchdyn",
    "pyyaml",
    "POT",
    "omegaconf",
    "wandb",
    "peft",
    "nflows"
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ipykernel",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/cosmostat/neurips-wl-challenge"
Repository = "https://github.com/cosmostat/neurips-wl-challenge"

[project.scripts]
trainer = "cosmoford.trainer:trainer_cli"
prepare_for_submission = "cosmoford.prepare_for_submission:main"

[tool.setuptools]
packages = ["cosmoford"]

[tool.setuptools.package-data]
cosmoford = ["*.npy"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
